# task-manager

./: .coveragerc  .coveralls.yml  .gitignore  Dockerfile  README.md  docker-compose.ci.yml  docker-compose.yml  makefile  pyproject.toml  requirements.txt
.github/workflows/: main.yml  test_actions.yml
client/: .dockerignore  Dockerfile  package.json
staticfiles/: staticfiles.json
task_manager/: celery.py  log_utils.py  settings.py  tasks.py  urls.py
task_manager/main/: admin.py  filters.py  serializers.py  utils.py  views.py
task_manager/main/migrations/: 0001_initial.py  0002_alter_task_state.py  0002_alter_user_managers_remove_user_is_admin_and_more.py  0003_alter_task_tag.py  0003_remove_task_executor_task_assignee.py  0004_alter_task_assignee_alter_task_author.py  0004_alter_user_role.py  0005_alter_tag_title_alter_task_author_alter_user_phone.py  0005_alter_user_options_remove_user_username_and_more.py  0006_alter_task_created_at_alter_task_updated_at.py  0006_alter_user_managers.py  0007_alter_user_is_active.py  0007_task_updated_to.py  0008_alter_user_is_active.py  (+18 more)
task_manager/services/: mail.py  single_resource.py
templates/: base.html
templates/components/: footer.html  navbar.html
templates/emails/: notification.html
templates/homepage/: homepage.html
test/: test_admin.py  test_user.py
tests/: base.py  base_test_views.py  factories.py  test_countdown.py  test_current_user.py  test_jwt_auth.py  test_mail.py  test_tag.py  test_task.py  test_user.py
tests/fixtures/: action_client.py
tests/test_views/: test_current_user.py  test_task_tags.py  test_user_tasks.py
(+12 files in other folders)
